# project-kuber

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  opencode.json  pyproject.toml  resumen-sistema-finanzas-telegram.md
api/: main.py
bot/: main.py
bot/handlers/: add.py  categories.py  quick.py  start.py  summary.py
core/: config.py  database.py  exceptions.py
migrations/: env.py
migrations/versions/: 2026_06_25_2312-e01b48ee0d85_initial_migration_with_mvp_entities.py
models/: __init__.py  base.py  category.py  exchange_rate.py  income_source.py  monthly_budget.py  payment_method.py  transaction.py  user.py
repositories/: base.py  category.py  transaction.py  user.py
services/: transaction.py  user.py
